--- a/AngularSolution/src/app/reactive-form/reactive-form.component.html
+++ b/AngularSolution/src/app/reactive-form/reactive-form.component.html
@@ -1,1 +1,17 @@
-<p>reactive-form works!</p>
+<h1>reactive-form works!</h1>
+<div>
+ <form [formGroup]="signupForm">
+    <div class="form-group">
+        <label for="userName">Username</label>
+        <input type="text" id="userName" formControlName="userName" class="form-control"/>
+    </div>
+    <div class="form-group">
+        <label for="userName">Username</label>
+        <input type="text" id="userName" formControlName="userName" class="form-control"/>
+    </div>
+    <div class="form-group">
+        <label for="userName">Username</label>
+        <input type="text" id="userName" formControlName="userName" class="form-control"/>
+    </div>
+ </form>
+</div>
