--- a/AngularSolution/src/app/reactive-form/reactive-form.component.html
+++ b/AngularSolution/src/app/reactive-form/reactive-form.component.html
@@ -6,6 +6,7 @@
         
         <label class="" for="username">Name</label>
         <input type="text" id="username" formControlName="username" class="form-control"/>
+        <span class="help-block" *ngIf="!signupForm.get('username')?.valid && signupForm.get('username')?.touched">please enter valid username</span>
     </div>
     <div class="form-group">
         <label for="email">Email id</label>
