--- a/AngularSolution/src/app/template-driven/template-driven.component.html
+++ b/AngularSolution/src/app/template-driven/template-driven.component.html
@@ -5,7 +5,7 @@
 style="margin: 50px; padding: 10px"
 type="button"
 class="btn btn-primary"
-(click)="openPopup()">Show Data
+(click)="openPopup()">Show Modal
 </button>
 <div
 class="modal"
@@ -18,7 +18,7 @@ role="dialog"
 		<h4 class="modal-title">GeeksForGeeks</h4>
 	</div>
 	<div class="modal-body">
-		<p>One Stop Solution for all CS problems</p>
+		<p>Modal pop up is working </p>
 
 	</div>
 	<div class="modal-footer">
